--- a/package.json
+++ b/package.json
@@ -1,10 +1,26 @@
 {
-"scripts": {
-  "build": "node index.js"
-},
+  "name": "acad_bot",
+  "version": "1.0.0",
+  "description": "UP CURSOR Acad Bot",
+  "main": "src/index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JericNarte/acad_bot.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/JericNarte/acad_bot/issues"
+  },
+  "homepage": "https://github.com/JericNarte/acad_bot#readme",
   "dependencies": {
-    "discord.js": "^14.7.0",
+    "discord.js": "^14.9.0",
     "dotenv": "^16.0.3",
-    "googleapis": "^109.0.1"
+    "googleapis": "^114.0.0"
   }
 }
