--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   },
   "homepage": "https://github.com/JericNarte/acad_bot#readme",
   "dependencies": {
-    "discord.js": "^14.9.0",
-    "dotenv": "^16.0.3",
-    "googleapis": "^114.0.0"
+    "discord.js": "^14.14.1",
+    "googleapis": "^134.0.0"
+  },
+  "devDependencies": {
+    "dotenv": "^16.4.5",
+    "eslint": "^9.0.0"
   }
 }
