--- a/package.json
+++ b/package.json
@@ -1,29 +1,30 @@
 {
-  "name": "acad_bot",
-  "version": "1.0.0",
-  "description": "UP CURSOR Acad Bot",
-  "main": "src/index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/JericNarte/acad_bot.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/JericNarte/acad_bot/issues"
-  },
-  "homepage": "https://github.com/JericNarte/acad_bot#readme",
-  "dependencies": {
-    "discord.js": "^14.14.1",
-    "googleapis": "^134.0.0"
-  },
-  "devDependencies": {
-    "dotenv": "^16.4.5",
-    "eslint": "^9.0.0"
-  }
+    "name": "skoduler",
+    "version": "1.0.0",
+    "description": "UP CURSOR Acad Bot",
+    "main": "src/index.js",
+    "scripts": {
+        "start": "node src/index.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/JericN/acad_bot.git"
+    },
+    "keywords": [
+        "discord",
+        "bot"
+    ],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "discord.js": "^14.14.1",
+        "googleapis": "^134.0.0"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.0.0",
+        "dotenv": "^16.4.5",
+        "eslint": "^8.57.0",
+        "globals": "^15.0.0",
+        "typescript-eslint": "^7.6.0"
+    }
 }
