--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "tsup": "^8.1.0",
         "tsx": "^4.15.7",
         "typescript": "^5.5.2",
+        "typescript-eslint": "^7.14.1",
         "zod": "^3.23.8"
     }
 }
