wip: need to fix unsend

--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
     "clientId": "1047033806298816533",
-    "devServers": ["922844835931643967"],
-    "devs": ["397354283802165259"]
+    "devServers": ["922844835931643967", "694205112020762644"],
+    "devs": ["397354283802165259", "694205112020762644"],
+    "thread_channel": "acads"
 }
