--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
     "description": "Discord bot for deadline management",
     "main": "src/index.js",
     "scripts": {
-        "dev": "tsx watch src/index.ts",
-        "start": "pnpm nodemon",
+        "start": "tsx watch src/index.ts",
         "build": "tsup src/index.ts --minify",
         "test": "pnpm node ./tools/test.js",
         "lint": "pnpm eslint ./src",
@@ -35,5 +34,6 @@
         "typescript": "^5.5.2",
         "typescript-eslint": "^7.14.1",
         "zod": "^3.23.8"
-    }
+    },
+    "packageManager": "pnpm@9.0.5+sha512.a722575c18fd791f9ef71e387c6e16cc03c90d859b9b0998d0428ca0e3220828b32a96e6de73cea34edbc0f50824771b1a69c7ea36b86daa3b89c7e6d9a3d912"
 }
